tests/regression/errors/basic/import_error_21.csd
// Import error test 21
yeet "nonexistent_module_21"
sus result drip = some_function(21)
